# initial-conditions-generator

./: .gitignore  .ignore  README.md  add_asteroids_to_solar_system.py  add_binary_companion.py  add_comets.py  add_debris_disk.py  add_moons_to_solar_system_planets.py  add_perturbation_to_model.py  add_planets_oligarch.py  add_proto_oort_cloud.py  add_scattered_asteroids.py  add_star_in_orbit.py  conv_amuse_to_brutus.py  determine_orbital_elements.py  gen_BetaPick_as_star_planets_and_disk.history  gen_cluster_of_stars_planets.csh  gen_cluster_of_stars_planets.sh  gen_cluster_of_stars_planets_and_disks.csh  gen_cluster_of_stars_planets_and_disks.sh  make_Fractal_model.py  make_Plummer_model.py  make_binary_stars.py  make_cluster_of_stars.py  make_cube_of_stars.py  make_exoplanetary_system.py  make_hierarchical_cluster_with_planets.py  make_nice_like_system.py  make_planets_oligarch.py  make_plummer_sphere.py  make_single_star.py  make_solar_system_planets.py  make_stars_in_mass_function.py  move_all_particles.py  move_bodies_to_stellar_position.py  name_stars.py  new_solar_system_with_sun_and_planets.py  orbital_elements_to_cartesian.py  plot_bodies.py  print_snapshot.py  (+3 more)
src/amuse_ic_generator/: add_asteroids_to_solar_system.py  add_binary_companion.py  add_binary_stars.py  add_comets.py  add_debris_disk.py  add_moons_to_solar_system_planets.py  add_planets_oligarch.py  add_planets_oligarchic.py  add_proto_oort_cloud.py  add_scattered_asteroids.py  conv_amuse_to_brutus.py  determine_orbital_elements.py  make_Plummer_model.py  make_cluster_of_stars.py  make_cube_of_stars.py  make_exoplanetary_system.py  make_fractal_model.py  make_hierarchical_cluster_with_planets.py  make_nice_like_system.py  make_plummer_sphere.py  make_single_star.py  make_solar_system_planets.py  make_stars_in_mass_function.py  move_all_particles.py  name_stars.py  new_solar_system_with_sun_and_planets.py  orbital_elements_to_cartesian.py  plot_bodies.py  rotate.py  write_set_as_ascii.py
