[project]
name = "amuse-ic-generator"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "amuse-framework",
]
description = "Initial Conditions Generator for AMUSE"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.scripts]
plot_bodies = "plot_bodies:main"
